@@ -8,6 +8,8 @@
 * New feature: SVN plugin
 * Do not show improper calltips provided by the rope library
 * Bug fix: find in files crash if the found line is the last one
+* New feature: Ctrl+Shift+T/M/B to move the text cursor to the first visible
+  line/to the line in the middle of the visible text/to the last visible line
 * Minor improvements and bug fixes
 
 
